--- a/templates/_include/fr_CD/homepage_social.html.twig
+++ b/templates/_include/fr_CD/homepage_social.html.twig
@@ -1,9 +1,9 @@
 <a href="https://www.facebook.com/en1ereligne"
-   title="{% trans %}social.find-facebook{% endtrans %}" target="_blank" rel="noreferrer noopener">
+   title="{{ 'social.find-facebook'|trans }}" target="_blank" rel="noreferrer noopener">
     {{ include('_icons/facebook.html.twig') }}</a>
 <a href="https://twitter.com/en1ereligne"
-   title="{% trans %}social.find-twitter{% endtrans %}" target="_blank" rel="noreferrer noopener">
+   title="{{ 'social.find-twitter'|trans }}" target="_blank" rel="noreferrer noopener">
     {{ include('_icons/twitter.html.twig') }}</a>
 <a href="https://www.linkedin.com/company/enpremiereligne/"
-   title="{% trans %}social.find-linkedin{% endtrans %}" target="_blank" rel="noreferrer noopener">
+   title="{{ 'social.find-linkedin'|trans }}" target="_blank" rel="noreferrer noopener">
     {{ include('_icons/linkedin.html.twig') }}</a>
