--- a/templates/admin/match.html.twig
+++ b/templates/admin/match.html.twig
@@ -5,19 +5,19 @@
 
 {% block main %}
     <div class="p-3">
-        {% trans %}admin.requester{% endtrans %}
+        {{ 'admin.requester'|trans }}
         <br />
         <strong>{{ match.requester.firstName }} {{ match.requester.lastName }}</strong> ({{ match.requester.zipCode }})
 
         {% if match.requester.ccFirstName %}
             <br />
-            {% trans %}admin.helped-by{% endtrans %}aidé par <strong>{{ match.requester.ccFirstName }} {{ match.requester.ccLastName }}</strong>
+            {{ 'admin.helped-by'|trans }}aidé par <strong>{{ match.requester.ccFirstName }} {{ match.requester.ccLastName }}</strong>
         {% endif %}
 
         <br />
-        {% trans %}admin.job-type{% endtrans %} {{ match.requester.jobType }}
+        {{ 'admin.job-type'|trans }} {{ match.requester.jobType }}
         <br />
-        {% trans %}label.date{% endtrans %} {{ match.requester.createdAt|date('d/m/Y H:i') }}
+        {{ 'label.date'|trans }} {{ match.requester.createdAt|date('d/m/Y H:i') }}
     </div>
 
     {% if match.groceries is not null %}
@@ -31,9 +31,9 @@
                 <div class="col-6">
                     <a href="{{ path('admin_match_close', {'type': 'groceries', 'ownerUuid': match.requester.ownerUuid}) }}"
                        class="btn btn-secondary mr-2">
-                        {% trans %}admin.close-requirement{% endtrans %}
+                        {{ 'admin.close-requirement'|trans }}
                     </a>
-                    <small>{% trans %}admin.close-requirement-help{% endtrans %}</small>
+                    <small>{{ 'admin.close-requirement-help'|trans }}</small>
                 </div>
             </div>
 
@@ -49,21 +49,21 @@
                                 <strong>{{ matchedHelper.helper.firstName }} {{ matchedHelper.helper.lastName }}</strong>
                                 ({{ matchedHelper.helper.zipCode }})
                                 <br />
-                                {% trans %}label.score{% endtrans %} {{ matchedHelper.score }}
+                                {{ 'label.score'|trans }} {{ matchedHelper.score }}
                                 ({{ matchedHelper.helper.canBabysit ? 'admin.can-babysit'|trans : 'admin.not-babysit'|trans }})
                                 <br />
-                                {{ matchedHelper.helper.age }} {% trans %}label.years{% endtrans %}
+                                {{ matchedHelper.helper.age }} {{ 'label.years'|trans }}
                             </div>
                             <div class="col-7">
                                 <a href="{{ path('admin_match_close', {'type': 'groceries', 'ownerUuid': match.requester.ownerUuid, 'id': matchedHelper.helper.id}) }}"
                                    class="btn btn-secondary mb-2 mr-4">
                                     <i class="fa fa-paper-plane mr-1"></i>
-                                    {% trans %}admin.send-and-close{% endtrans %}
+                                    {{ 'admin.send-and-close'|trans }}
                                 </a>
                                 <a href="{{ path('admin_match_block', {'ownerUuid': match.requester.ownerUuid, 'id': matchedHelper.helper.id}) }}"
                                    class="btn btn-link mb-2">
                                     <i class="fa fa-times mr-1"></i>
-                                    {% trans %}admin.block-match{% endtrans %}
+                                    {{ 'admin.block-match'|trans }}
                                 </a>
                             </div>
                         </div>
@@ -82,7 +82,7 @@
                     <div class="mb-2">
                         <strong>{% trans with {'name': match.requester.firstName, 'number': match.babysitNeeds|length } %}admin.needs-babysitting{% endtrans %}</strong>
                     </div>
-                    {% trans %}label.ages{% endtrans %}
+                    {{ 'label.ages'|trans }}
                     {% for need in match.babysitNeeds %}
                         <span class="badge badge-secondary">{{ need.childAgeRange }}</span>
                     {% endfor %}
@@ -90,9 +90,9 @@
                 <div class="col-6">
                     <a href="{{ path('admin_match_close', {'type': 'babysit', 'ownerUuid': match.requester.ownerUuid}) }}"
                        class="btn btn-secondary mr-2">
-                        {% trans %}admin.close-requirement{% endtrans %}
+                        {{ 'admin.close-requirement'|trans }}
                     </a>
-                    <small>{% trans %}admin.close-requirement-help{% endtrans %}</small>
+                    <small>{{ 'admin.close-requirement-help'|trans }}</small>
                 </div>
             </div>
 
@@ -108,14 +108,14 @@
                                 <strong>{{ matchedHelper.helper.firstName }} {{ matchedHelper.helper.lastName }}</strong>
                                 ({{ matchedHelper.helper.zipCode }})
                                 <br />
-                                {% trans %}label.score{% endtrans %} {{ matchedHelper.score }}
+                                {{ 'label.score'|trans }} {{ matchedHelper.score }}
                                 <br />
-                                {{ matchedHelper.helper.age }} {% trans %}label.years{% endtrans %},
+                                {{ matchedHelper.helper.age }} {{ 'label.years'|trans }},
                                 {{ matchedHelper.helper.haveChildren ? 'label.has-children'|trans : 'label.no-children'|trans }}
                                 <br />
                                 {% trans with {'number': matchedHelper.helper.babysitMaxChildren } %}admin.can-babysit-count{% endtrans %}
                                 <br />
-                                {% trans %}admin.accepts-ages{% endtrans %}
+                                {{ 'admin.accepts-ages'|trans }}
                                 {% for range in matchedHelper.helper.babysitAgeRanges %}
                                     <span class="badge badge-secondary">{{ range }}</span>
                                 {% endfor %}
@@ -124,12 +124,12 @@
                                 <a href="{{ path('admin_match_close', {'type': 'babysit', 'ownerUuid': match.requester.ownerUuid, 'id': matchedHelper.helper.id}) }}"
                                    class="btn btn-secondary mb-2 mr-4">
                                     <i class="fa fa-paper-plane mr-1"></i>
-                                    {% trans %}admin.send-and-close{% endtrans %}
+                                    {{ 'admin.send-and-close'|trans }}
                                 </a>
                                 <a href="{{ path('admin_match_block', {'ownerUuid': match.requester.ownerUuid, 'id': matchedHelper.helper.id}) }}"
                                    class="btn btn-link mb-2">
                                     <i class="fa fa-times mr-1"></i>
-                                    {% trans %}admin.block-match{% endtrans %}
+                                    {{ 'admin.block-match'|trans }}
                                 </a>
                             </div>
                         </div>
