--- a/templates/admin/statistics.html.twig
+++ b/templates/admin/statistics.html.twig
@@ -13,7 +13,7 @@
                     </strong>
                 </h1>
                 <small class="text-uppercase">
-                    {% trans %}admin.number-volunteers{% endtrans %}
+                    {{ 'admin.number-volunteers'|trans }}
                 </small>
             </div>
             <div class="col-3 text-center">
@@ -26,7 +26,7 @@
                     </small>
                 </h1>
                 <small class="text-uppercase">
-                    {% trans %}admin.number-matches{% endtrans %}
+                    {{ 'admin.number-matches'|trans }}
                 </small>
             </div>
             <div class="col-3 text-center">
@@ -36,7 +36,7 @@
                     </strong>
                 </h1>
                 <small class="text-uppercase">
-                    {% trans %}admin.number-requests{% endtrans %}
+                    {{ 'admin.number-requests'|trans }}
                 </small>
             </div>
             <div class="col-3 text-center">
@@ -49,7 +49,7 @@
                     </small>
                 </h1>
                 <small class="text-uppercase">
-                    {% trans %}admin.number-requests-matched{% endtrans %}
+                    {{ 'admin.number-requests-matched'|trans }}
                 </small>
             </div>
         </div>
@@ -142,7 +142,7 @@
 
                 <div class="p-2 mt-4">
                     <strong>
-                        {% trans %}admin.by-job{% endtrans %}
+                        {{ 'admin.by-job'|trans }}
                     </strong>
                 </div>
 
@@ -161,7 +161,7 @@
 
                 <div class="p-2 mt-4">
                     <strong>
-                        {% trans %}admin.by-department{% endtrans %}
+                        {{ 'admin.by-department'|trans }}
                     </strong>
                 </div>
 
