--- a/templates/content/fr_CD/legalities.html.twig
+++ b/templates/content/fr_CD/legalities.html.twig
@@ -12,24 +12,24 @@
                     Editeur
                 </h5>
 
-                <ul>
-                    <li>
-                        Titouan Galopin : <a href="mailto:titouan@lisungi.org">titouan@lisungi.org</a>
-                    </li>
-                    <li>
-                        Adrien Duguet : <a href="mailto:adrien@lisungi.org">adrien@lisungi.org</a>
-                    </li>
-                    <li>
-                        Gregory Grellet : <a href="mailto:gregory@lisungi.org">gregory@lisungi.org</a>
-                    </li>
-                </ul>
+                <p>
+                    XXX : <a href="mailto:team@lisungi.org">team@lisungi.org</a>
+                </p>
 
                 <h5 class="font-weight-bold mt-4">
                     Directeur de la publication
                 </h5>
 
                 <p>
-                    Titouan Galopin : <a href="mailto:titouan@lisungi.org">titouan@lisungi.org</a>
+                    XXX : <a href="mailto:team@lisungi.org">team@lisungi.org</a>
+                </p>
+
+                <h5 class="font-weight-bold mt-4">
+                    Développement
+                </h5>
+
+                <p>
+                    Citipo : <a href="https://citipo.com" target="_blank">https://citipo.com</a>
                 </p>
 
                 <h5 class="font-weight-bold mt-4">
