--- a/templates/emails/_include/footer.html.twig
+++ b/templates/emails/_include/footer.html.twig
@@ -1,19 +1,19 @@
 <p>
-    {% trans %}email.share-link{% endtrans %}
+    {{ 'email.share-link'|trans }}
 </p>
 
 <p>
-    {% trans %}site.url{% endtrans %}
+    {{ 'site.url'|trans }}
 </p>
 
 <p>
-    {% trans %}email.good-luck{% endtrans %}
+    {{ 'email.good-luck'|trans }}
 </p>
 
 <p>
-    {% trans %}email.signoff{% endtrans %}
+    {{ 'email.signoff'|trans }}
 </p>
 
 <p>
-    {% trans %}email.site-helped{% endtrans %}
+    {{ 'email.site-helped'|trans }}
 </p>
