--- a/templates/emails/_include/guidelines_global.html.twig
+++ b/templates/emails/_include/guidelines_global.html.twig
@@ -1,5 +1,5 @@
 <p>
-    {% trans %}email.show-id{% endtrans %}
+    {{ 'email.show-id'|trans }}
 </p>
 
 <p>
@@ -7,45 +7,45 @@
 </p>
 
 <p>
-    {% trans %}email.travel-certificate-link{% endtrans %}
+    {{ 'email.travel-certificate-link'|trans }}
 </p>
 
 <p>
-    {% trans %}email.other-things{% endtrans %}
+    {{ 'email.other-things'|trans }}
 </p>
 
 <ul>
     <li>
-        {% trans %}email.please-reply{% endtrans %}
+        {{ 'email.please-reply'|trans }}
     </li>
 
     <li>
-        {% trans %}email.no-match{% endtrans %}
+        {{ 'email.no-match'|trans }}
     </li>
 </ul>
 
 <p>
-    {% trans %}email.healthy-carriers{% endtrans %}
+    {{ 'email.healthy-carriers'|trans }}
 </p>
 
 <p>
-    {% trans %}email.reminders{% endtrans %}
+    {{ 'email.reminders'|trans }}
 </p>
 
 <ul>
     <li>
-        {% trans %}email.wash-hands{% endtrans %}
+        {{ 'email.wash-hands'|trans }}
     </li>
     <li>
-        {% trans %}email.cough-elbow{% endtrans %}
+        {{ 'email.cough-elbow'|trans }}
     </li>
     <li>
-        {% trans %}email.no-shaking-hands{% endtrans %}
+        {{ 'email.no-shaking-hands'|trans }}
     </li>
     <li>
-        {% trans %}email.use-tissues{% endtrans %}
+        {{ 'email.use-tissues'|trans }}
     </li>
     <li>
-        {% trans %}email.avoid-gatherings{% endtrans %}
+        {{ 'email.avoid-gatherings'|trans }}
     </li>
 </ul>
