--- a/templates/emails/_include/guidelines_groceries.html.twig
+++ b/templates/emails/_include/guidelines_groceries.html.twig
@@ -1,52 +1,52 @@
 <p>
-    {% trans %}email.avoid-contact{% endtrans %}
+    {{ 'email.avoid-contact'|trans }}
 </p>
 
 <ul>
     <li>
-        {% trans %}email.for-volunteers{% endtrans %}
+        {{ 'email.for-volunteers'|trans }}
 
         <ul>
             <li>
-                {% trans %}email.use-contactless{% endtrans %}
+                {{ 'email.use-contactless'|trans }}
             </li>
             <li>
-                {% trans %}email.repayment{% endtrans %}
+                {{ 'email.repayment'|trans }}
             </li>
             <li>
-                {% trans %}email.contactless-delivery{% endtrans %}
+                {{ 'email.contactless-delivery'|trans }}
 
                 <ul>
                     <li>
-                        {% trans %}email.apply-barriers{% endtrans %}
+                        {{ 'email.apply-barriers'|trans }}
                     </li>
                     <li>
-                        {% trans %}email.shop-and-bag{% endtrans %}
+                        {{ 'email.shop-and-bag'|trans }}
                     </li>
                     <li>
-                        {% trans %}email.deliver-and-advise{% endtrans %}
+                        {{ 'email.deliver-and-advise'|trans }}
                     </li>
                     <li>
-                        {% trans %}email.move-away{% endtrans %}
+                        {{ 'email.move-away'|trans }}
                     </li>
                 </ul>
-                {% trans %}email.online-details{% endtrans %}
+                {{ 'email.online-details'|trans }}
             </li>
         </ul>
     </li>
 
     <li>
-        {% trans %}email.needing-help{% endtrans %}
+        {{ 'email.needing-help'|trans }}
 
         <ul>
             <li>
-                {% trans %}email.prepare-menu{% endtrans %}
+                {{ 'email.prepare-menu'|trans }}
             </li>
             <li>
-                {% trans %}email.make-list{% endtrans %}
+                {{ 'email.make-list'|trans }}
             </li>
             <li>
-                {% trans %}email.price-range{% endtrans %}
+                {{ 'email.price-range'|trans }}
             </li>
         </ul>
     </li>
