--- a/templates/emails/helper.html.twig
+++ b/templates/emails/helper.html.twig
@@ -3,11 +3,11 @@
 </p>
 
 <p>
-    {% trans %}email.offer-thanks{% endtrans %}
+    {{ 'email.offer-thanks'|trans }}
 </p>
 
 <p>
-    {% trans %}email.offer-saved{% endtrans %}
+    {{ 'email.offer-saved'|trans }}
 </p>
 
 <p>
@@ -15,13 +15,13 @@
 </p>
 
 <p>
-    {% trans %}email.offer-notified{% endtrans %}
+    {{ 'email.offer-notified'|trans }}
 </p>
 
 <p>
-    {% trans %}email.offer-commitment{% endtrans %}
+    {{ 'email.offer-commitment'|trans }}
 </p>
 
 <p>
-    {% trans %}email.signoff{% endtrans %}
+    {{ 'email.signoff'|trans }}
 </p>
