--- a/templates/emails/request.html.twig
+++ b/templates/emails/request.html.twig
@@ -3,11 +3,11 @@
 </p>
 
 <p>
-    {% trans %}email.request-thanks{% endtrans %}
+    {{ 'email.request-thanks'|trans }}
 </p>
 
 <p>
-    {% trans %}email.request-saved{% endtrans %}
+    {{ 'email.request-saved'|trans }}
 </p>
 
 <p>
@@ -15,13 +15,13 @@
 </p>
 
 <p>
-    {% trans %}email.request-notified{% endtrans %}
+    {{ 'email.request-notified'|trans }}
 </p>
 
 <p>
-    {% trans %}email.request-commitment{% endtrans %}
+    {{ 'email.request-commitment'|trans }}
 </p>
 
 <p>
-    {% trans %}email.signoff{% endtrans %}
+    {{ 'email.signoff'|trans }}
 </p>
