--- a/templates/_include/footer.html.twig
+++ b/templates/_include/footer.html.twig
@@ -2,23 +2,23 @@
     <div class="mb-3 home-footer-social">
         {% include '_include/' ~ app.request.locale ~ '/homepage_social.html.twig' %}
         <a href="https://github.com/tgalopin/lisungi.org"
-           title="{% trans %}social.find-github{% endtrans %}" target="_blank" rel="noreferrer noopener">
+           title="{{ 'social.find-github'|trans }}" target="_blank" rel="noreferrer noopener">
             {{ include('_icons/github.html.twig') }}</a>
     </div>
     <div>
         <a href="{{ path('content_why') }}">
-            {% trans %}footer.why{% endtrans %}</a>
+            {{ 'footer.why'|trans }}</a>
         <a href="{{ path('content_who') }}">
-            {% trans %}footer.who{% endtrans %}</a>
+            {{ 'footer.who'|trans }}</a>
         <a href="{{ path('content_international') }}">
-            {% trans %}footer.international{% endtrans %}</a>
+            {{ 'footer.international'|trans }}</a>
         <a href="{{ path('content_links') }}">
-            {% trans %}footer.information{% endtrans %}</a>
+            {{ 'footer.information'|trans }}</a>
         <a href="{{ path('content_privacy') }}">
-            {% trans %}footer.privacy{% endtrans %}</a>
+            {{ 'footer.privacy'|trans }}</a>
         <a href="{{ path('content_conditions') }}">
-            {% trans %}footer.conditions{% endtrans %}</a>
+            {{ 'footer.conditions'|trans }}</a>
         <a href="{{ path('content_legalities') }}">
-            {% trans %}footer.legal{% endtrans %}</a>
+            {{ 'footer.legal'|trans }}</a>
     </div>
 </footer>
