--- a/templates/admin/matches.html.twig
+++ b/templates/admin/matches.html.twig
@@ -8,12 +8,12 @@
         <div class="p-3">
             <div class="row align-items-center">
                 <div class="col-5">
-                    {% trans %}admin.requester{% endtrans %} <strong>{{ match.requester.firstName }} {{ match.requester.lastName }}</strong>
+                    {{ 'admin.requester'|trans }} <strong>{{ match.requester.firstName }} {{ match.requester.lastName }}</strong>
                     ({{ match.requester.jobType }})
 
                     {% if match.requester.ccFirstName %}
                         <br />
-                        {% trans %}admin.helped-by{% endtrans %} <strong>{{ match.requester.ccFirstName }} {{ match.requester.ccLastName }}</strong>
+                        {{ 'admin.helped-by'|trans }} <strong>{{ match.requester.ccFirstName }} {{ match.requester.ccLastName }}</strong>
                     {% endif %}
 
                     <ul class="m-0">
