--- a/templates/page_base.html.twig
+++ b/templates/page_base.html.twig
@@ -6,16 +6,16 @@
     <div class="container pt-5 pb-5">
         <div class="text-center mb-4">
             <h1 class="sr-only">
-                {% trans %}site.name{% endtrans %}
+                {{ 'site.name'|trans }}
             </h1>
 
             <a href="{{ path('homepage') }}">
-                <img src="{{ asset(localized_assets_folder ~ 'res/logo.png') }}" class="process-logo" alt="{% trans %}site.name{% endtrans %}" />
+                <img src="{{ asset(localized_assets_folder ~ 'res/logo.png') }}" class="process-logo" alt="{{ 'site.name'|trans }}" />
             </a>
 
             <div class="mt-2">
                 <a href="{{ path('homepage') }}">
-                    <small>{% trans %}label.home{% endtrans %}</small>
+                    <small>{{ 'label.home'|trans }}</small>
                 </a>
             </div>
         </div>
