--- a/templates/process/helper.html.twig
+++ b/templates/process/helper.html.twig
@@ -1,22 +1,22 @@
 {% extends 'page_base.html.twig' %}
 
-{% block title %}{% trans %}label.offer-help{% endtrans %} | {% trans %}site.title{% endtrans %}{% endblock %}
+{% block title %}{{ 'label.offer-help'|trans }} | {{ 'site.title'|trans }}{% endblock %}
 
 {% block content %}
     <div class="process-box">
         <div class="bg-light p-3 p-lg-4">
             <h3 class="text-center font-weight-bold mb-4">
-                {% trans %}label.offer-help{% endtrans %}
+                {{ 'label.offer-help'|trans }}
             </h3>
 
             <div class="process-details mb-4 pb-3">
-                <p>{% trans %}offer.intro-one{% endtrans %}</p>
-                <p>{% trans %}offer.intro-two{% endtrans %}</p>
-                <p>{% trans %}offer.intro-three{% endtrans %}</p>
-                <p>{% trans %}offer.intro-four{% endtrans %}</p>
+                <p>{{ 'offer.intro-one'|trans|raw }}</p>
+                <p>{{ 'offer.intro-two'|trans|raw }}</p>
+                <p>{{ 'offer.intro-three'|trans|raw }}</p>
+                <p>{{ 'offer.intro-four'|trans|raw }}</p>
 
                 <a href="{{ path('content_how') }}">
-                    {% trans %}label.how-platform-works{% endtrans %}
+                    {{ 'label.how-platform-works'|trans }}
                 </a>
             </div>
 
@@ -27,72 +27,143 @@
             <div class="process-block bg-white p-3 p-lg-4 mb-4">
                 <div class="row">
                     <div class="col-12 col-lg-6 mb-3">
-                        {{ form_row(form.firstName, {'label': 'label.name-first-required'}) }}
+                        {{ form_row(form.firstName, {'label': 'label.name-first-required'|trans}) }}
                     </div>
                     <div class="col-12 col-lg-6 mb-3">
-                        {{ form_row(form.lastName, {'label': 'label.name-last-required'}) }}
+                        {{ form_row(form.lastName, {'label': 'label.name-last-required'|trans}) }}
+                    </div>
+                </div>
+
+                <div class="row align-items-center">
+                    <div class="col-12 col-lg-6 mb-3">
+                        {{ form_row(form.locality, {'label': 'label.locality-required'|trans}) }}
+                    </div>
+                    <div class="col-12 col-lg-6 mb-3">
+                        {{ form_row(form.isCompany, {'label': 'label.is-company'|trans}) }}
+                    </div>
+                </div>
+
+                {{ form_row(form.email, {'label': 'label.email-required', 'help': 'help.email'|trans}) }}
+            </div>
+
+            <div class="process-block bg-white p-3 p-lg-4 mb-4">
+                <h5 class="text-muted text-uppercase mb-4">
+                    {{ 'label.medical'|trans }}
+                </h5>
+
+                <div class="row mb-3">
+                    <div class="col-lg-5">
+                        {{ form_label(form.masks, 'label.helper-masks'|trans) }}
+                    </div>
+                    <div class="col-lg-7">
+                        {{ form_widget(form.masks) }}
+                        {{ form_errors(form.masks) }}
+                        <small class="form-text text-muted">{{ 'help.how-many-units'|trans }}</small>
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col-lg-5">
+                        {{ form_label(form.glasses, 'label.helper-glasses'|trans) }}
+                    </div>
+                    <div class="col-lg-7">
+                        {{ form_widget(form.glasses) }}
+                        {{ form_errors(form.glasses) }}
+                        <small class="form-text text-muted">{{ 'help.how-many-units'|trans }}</small>
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col-lg-5">
+                        {{ form_label(form.blouses, 'label.helper-blouses'|trans) }}
+                    </div>
+                    <div class="col-lg-7">
+                        {{ form_widget(form.blouses) }}
+                        {{ form_errors(form.blouses) }}
+                        <small class="form-text text-muted">{{ 'help.how-many-units'|trans }}</small>
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col-lg-5">
+                        {{ form_label(form.gel, 'label.helper-gel'|trans) }}
+                    </div>
+                    <div class="col-lg-7">
+                        {{ form_widget(form.gel) }}
+                        {{ form_errors(form.gel) }}
+                        <small class="form-text text-muted">{{ 'help.how-many-ml'|trans }}</small>
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col-lg-5">
+                        {{ form_label(form.gloves, 'label.helper-gloves'|trans) }}
+                    </div>
+                    <div class="col-lg-7">
+                        {{ form_widget(form.gloves) }}
+                        {{ form_errors(form.gloves) }}
+                        <small class="form-text text-muted">{{ 'help.how-many-pairs'|trans }}</small>
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col-lg-5">
+                        {{ form_label(form.disinfectant, 'label.helper-disinfectant'|trans) }}
+                    </div>
+                    <div class="col-lg-7">
+                        {{ form_widget(form.disinfectant) }}
+                        {{ form_errors(form.disinfectant) }}
+                        <small class="form-text text-muted">{{ 'help.how-many-ml'|trans }}</small>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-12 col-lg-6 mb-3">
-                        {{ form_row(form.age, {'label': 'label.age-required'}) }}
+                    <div class="col-lg-5">
+                        {{ form_label(form.paracetamol, 'label.helper-paracetamol'|trans) }}
                     </div>
-                    <div class="col-12 col-lg-6 mb-3">
-                        {{ form_row(form.zipCode, {
-                            'label': 'label.postcode-required',
-                            'help': 'help.postcode'
-                        }) }}
+                    <div class="col-lg-7">
+                        {{ form_widget(form.paracetamol) }}
+                        {{ form_errors(form.paracetamol) }}
+                        <small class="form-text text-muted">{{ 'help.how-many-doses'|trans }}</small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="process-block bg-white p-3 p-lg-4 mb-4">
+                <h5 class="text-muted text-uppercase mb-4">
+                    {{ 'label.other'|trans }}
+                </h5>
+
+                <div class="row mb-3">
+                    <div class="col-lg-5">
+                        {{ form_label(form.food, 'label.helper-food'|trans) }}
+                    </div>
+                    <div class="col-lg-7">
+                        {{ form_widget(form.food) }}
+                        {{ form_errors(form.food) }}
+                        <small class="form-text text-muted">{{ 'help.food'|trans }}</small>
                     </div>
                 </div>
 
-                {{ form_row(form.email, {'label': 'label.email-required', 'help': 'help.email'}) }}
-            </div>
-
-            <div class="process-block bg-white p-3 p-lg-4 mb-4">
-                {{ form_row(form.canBuyGroceries, {
-                    'label': 'label.can-buy-groceries',
-                    'label_attr': { 'class': 'checkbox-custom' },
-                    'help': 'help.can-buy-groceries'
-                }) }}
-            </div>
-
-            <div class="process-block bg-white p-3 p-lg-4 mb-4">
-                {{ form_row(form.acceptVulnerable, {
-                    'label': 'label.accept-vulnerable',
-                    'label_attr': { 'class': 'checkbox-custom' },
-                    'help': 'help.accept-vulnerable'
-                }) }}
-            </div>
-
-            <div class="process-block bg-white p-3 p-lg-4 mb-4">
-                <div class="mb-3">
-                    {{ form_row(form.canBabysit, {
-                        'label': 'label.can-babysit',
-                        'label_attr': { 'class': 'checkbox-custom' },
-                        'help': 'help.can-babysit'
-                    }) }}
+                <div class="row mb-3">
+                    <div class="col-lg-5">
+                        {{ form_label(form.soap, 'label.helper-soap'|trans) }}
+                    </div>
+                    <div class="col-lg-7">
+                        {{ form_widget(form.soap) }}
+                        {{ form_errors(form.soap) }}
+                        <small class="form-text text-muted">{{ 'help.how-many-ml'|trans }}</small>
+                    </div>
                 </div>
 
-                <div class="p-4" id="babysit-fields">
-                    <div class="mb-3">
-                        {{ form_row(form.haveChildren, {
-                            'label': 'label.have-children',
-                            'label_attr': { 'class': 'checkbox-custom' },
-                            'help': 'help.have-children'
-                        }) }}
+                <div class="row">
+                    <div class="col-lg-5">
+                        {{ form_label(form.other, 'label.helper-other'|trans) }}
                     </div>
-
-                    <div class="mb-3">
-                        {{ form_row(form.babysitMaxChildren, {
-                            'label': 'label.babysit-max-children'
-                        }) }}
-                    </div>
-
-                    <div class="mb-3">
-                        {{ form_row(form.babysitAgeRanges, {
-                            'label': 'label.babysit-ages'
-                        }) }}
+                    <div class="col-lg-7">
+                        {{ form_widget(form.other) }}
+                        {{ form_errors(form.other) }}
+                        <small class="form-text text-muted">{{ 'help.other'|trans }}</small>
                     </div>
                 </div>
             </div>
@@ -107,12 +178,12 @@
 
             <div class="text-center mb-5">
                 <button type="submit" class="btn btn-lg btn-primary">
-                    {% trans %}label.send-proposal{% endtrans %}
+                    {{ 'label.send-proposal'|trans }}
                 </button>
 
                 <div class="mt-3">
                     <strong class="text-muted">
-                        {% trans %}label.revise-proposal{% endtrans %}
+                        {{ 'label.revise-proposal'|trans }}
                     </strong>
                 </div>
             </div>
@@ -120,7 +191,7 @@
             {{ form_end(form) }}
 
             <div class="legalities pt-5">
-                {% trans %}footer.data-statement{% endtrans %}
+                {{ 'footer.data-statement'|trans|raw }}
             </div>
         </div>
     </div>
