--- a/templates/process/helper_delete_confirm.html.twig
+++ b/templates/process/helper_delete_confirm.html.twig
@@ -8,22 +8,22 @@
     <div class="process-box">
         <div class="bg-light p-3 p-lg-4">
             <h3 class="text-center font-weight-bold mb-4">
-                {% trans %}offer.my-offer{% endtrans %}
+                {{ 'offer.my-offer'|trans }}
             </h3>
 
             <div class="process-details">
                 <p>
-                    {% trans %}offer.remove-confirm{% endtrans %}
+                    {{ 'offer.remove-confirm'|trans }}
                 </p>
 
                 <div class="text-center mt-4">
                     <a href="{{ path('process_helper_delete_do', {'uuid': helper.uuid, 'token': csrf_token('helper_delete')}) }}"
                        class="btn btn-danger">
-                        {% trans %}label.yes-remove{% endtrans %}
+                        {{ 'label.yes-remove'|trans }}
                     </a>
                     <a href="{{ path('process_helper_view', {'uuid': helper.uuid}) }}"
                        class="btn btn-link">
-                        {% trans %}label.no-return{% endtrans %}
+                        {{ 'label.no-return'|trans }}
                     </a>
                 </div>
             </div>
