--- a/templates/process/helper_view.html.twig
+++ b/templates/process/helper_view.html.twig
@@ -8,13 +8,13 @@
     <div class="process-box">
         <div class="bg-light p-3 p-lg-4">
             <h3 class="text-center font-weight-bold mb-4">
-                {% trans %}offer.my-offer{% endtrans %}
+                {{ 'offer.my-offer'|trans }}
             </h3>
 
             <div class="process-details">
                 {% if success %}
                     <div class="alert alert-success text-center mb-4">
-                        {% trans %}offer.registered{% endtrans %}
+                        {{ 'offer.registered'|trans }}
                     </div>
                 {% endif %}
 
@@ -22,10 +22,10 @@
                     <div class="mb-3 text-center">
                         <p>
                             <strong>
-                                {% trans %}offer.keep-link{% endtrans %}
+                                {{ 'offer.keep-link'|trans }}
                             </strong>
                         </p>
-                        {% trans %}offer.delete-any-time{% endtrans %}
+                        {{ 'offer.delete-any-time'|trans }}
                     </div>
 
                     <div class="process-block bg-white p-3 p-lg-4 mb-4">
@@ -34,22 +34,22 @@
 
                     <div class="process-block bg-white p-3 p-lg-4 mb-4">
                         <p>
-                            {% trans %}offer.told-us{% endtrans %}
+                            {{ 'offer.told-us'|trans }}
                         </p>
 
                         <ul>
                             <li>
                                 {% if helper.canBuyGroceries or helper.acceptVulnerable %}
-                                    {% trans %}offer.able-to-shop{% endtrans %}
+                                    {{ 'offer.able-to-shop'|trans }}
                                 {% else %}
-                                    {% trans %}offer.not-able-to-shop{% endtrans %}
+                                    {{ 'offer.not-able-to-shop'|trans }}
                                 {% endif %}
                             </li>
                             <li>
                                 {% if helper.canBabysit %}
                                     {% trans with {'max': helper.babysitMaxChildren } %}offer.able-to-babysit{% endtrans %}
                                 {% else %}
-                                    {% trans %}offer.not-able-to-babysit{% endtrans %}
+                                    {{ 'offer.not-able-to-babysit'|trans }}
                                 {% endif %}
                             </li>
                         </ul>
@@ -58,24 +58,24 @@
                     <div class="process-block bg-white p-3 p-lg-4 mb-4">
                         <div class="text-muted text-uppercase">
                             <div class="mb-3">
-                                {% trans %}social.share-initiative{% endtrans %}
+                                {{ 'social.share-initiative'|trans }}
                             </div>
 
                             <div class="process-share text-center">
                                 <a href="https://www.facebook.com/sharer/sharer.php?u={{ url('homepage')|url_encode }}"
-                                   title="{% trans %}social.share-facebook{% endtrans %}" target="_blank" rel="noreferrer noopener">
+                                   title="{{ 'social.share-facebook'|trans }}" target="_blank" rel="noreferrer noopener">
                                     {{ include('_icons/facebook.html.twig') }}
                                 </a>
                                 <a href="https://twitter.com/intent/tweet?text={{ url('homepage') }}"
-                                   title="{% trans %}social.share-twitter{% endtrans %}" target="_blank" rel="noreferrer noopener">
+                                   title="{{ 'social.share-twitter'|trans }}" target="_blank" rel="noreferrer noopener">
                                     {{ include('_icons/twitter.html.twig') }}
                                 </a>
                                 <a href="https://telegram.me/share/url?url={{ url('homepage') }}"
-                                   title="{% trans %}social.share-telegram{% endtrans %}" target="_blank" rel="noreferrer noopener">
+                                   title="{{ 'social.share-telegram'|trans }}" target="_blank" rel="noreferrer noopener">
                                     {{ include('_icons/telegram.html.twig') }}
                                 </a>
                                 <a href="https://wa.me/?text={{ url('homepage') }}"
-                                   title="{% trans %}social.share-whatsapp{% endtrans %}" target="_blank" rel="noreferrer noopener">
+                                   title="{{ 'social.share-whatsapp'|trans }}" target="_blank" rel="noreferrer noopener">
                                     {{ include('_icons/whatsapp.html.twig') }}
                                 </a>
                             </div>
@@ -85,12 +85,12 @@
                     <div class="text-center mt-5">
                         <a href="{{ path('process_helper_delete_confirm', {'uuid': helper.uuid}) }}"
                            class="btn btn-primary btn-lg">
-                            {% trans %}offer.remove{% endtrans %}
+                            {{ 'offer.remove'|trans }}
                         </a>
 
                         <div class="mt-3">
                             <strong class="text-muted">
-                                {% trans %}offer.delete-to-update{% endtrans %}
+                                {{ 'offer.delete-to-update'|trans }}
                             </strong>
                         </div>
                     </div>
