--- a/templates/process/request.html.twig
+++ b/templates/process/request.html.twig
@@ -1,25 +1,25 @@
 {% extends 'page_base.html.twig' %}
 
-{% block title %}{% trans %}label.request-help{% endtrans %} | {% trans %}site.title{% endtrans %}{% endblock %}
+{% block title %}{{ 'label.request-help'|trans }} | {{ 'site.title'|trans }}{% endblock %}
 
 {% block content %}
     <div class="process-box">
         <div class="bg-light p-3 p-lg-4">
             <h3 class="text-center font-weight-bold mb-4">
-                {% trans %}label.request-help{% endtrans %}
+                {{ 'label.request-help'|trans }}
             </h3>
 
             <div class="process-details mb-4 pb-3">
                 <p>
-                    {% trans %}request.intro-one{% endtrans %}
+                    {{ 'request.intro-one'|trans }}
                 </p>
 
                 <p>
-                    {% trans %}request.intro-two{% endtrans %}
+                    {{ 'request.intro-two'|trans }}
                 </p>
 
                 <a href="{{ path('content_how') }}">
-                    {% trans %}label.how-platform-works{% endtrans %}
+                    {{ 'label.how-platform-works'|trans }}
                 </a>
             </div>
 
@@ -39,16 +39,10 @@
 
                 <div class="row">
                     <div class="col-12 col-lg-6 mb-3">
-                        {{ form_row(form.zipCode, {
-                            'label': 'label.postcode-required',
-                            'help': 'help.postcode'
-                        }) }}
+                        {{ form_row(form.locality, {'label': 'label.locality-required'|trans}) }}
                     </div>
                     <div class="col-12 col-lg-6 mb-3">
-                        {{ form_row(form.jobType, {
-                            'label': 'label.field-of-work-required',
-                            'help': 'help.field-of-work'
-                        }) }}
+                        {{ form_row(form.organization, {'label': 'label.organization'|trans, 'help': 'help.organization'|trans}) }}
                     </div>
                 </div>
 
@@ -58,14 +52,44 @@
             <div class="process-block bg-white p-3 p-lg-4 mb-4">
                 <div class="mb-3">
                     <strong>
-                        {% trans %}label.needs{% endtrans %}
+                        {{ 'label.needs'|trans }}
                     </strong>
                 </div>
 
-                <div id="request-needs" class="process-needs">
-                    {{ form_widget(form.details) }}
-                    {{ form_widget(form.preferParents) }}
-                </div>
+                {% for type, fields in form.details %}
+                    <hr />
+
+                    <div class="py-2 px-4">
+                        <div class="row">
+                            <div class="col-lg-5">
+                                {{ form_row(fields.need, {'label': ('label.need-'~type)|trans}) }}
+                            </div>
+                            <div class="col-lg-7" style="opacity: 0.5;">
+                                {% if type in ['masks', 'glasses', 'blouses'] %}
+                                    {{ form_row(fields.quantity, {'label': 'help.need-how-many-units'|trans}) }}
+                                    <div class="d-none">{{ form_row(fields.details) }}</div>
+                                {% elseif type in ['gel', 'soap', 'disinfectant'] %}
+                                    {{ form_row(fields.quantity, {'label': 'help.need-how-many-ml'|trans}) }}
+                                    <div class="d-none">{{ form_row(fields.details) }}</div>
+                                {% elseif type in ['gloves'] %}
+                                    {{ form_row(fields.quantity, {'label': 'help.need-how-many-pairs'|trans}) }}
+                                    <div class="d-none">{{ form_row(fields.details) }}</div>
+                                {% elseif type in ['paracetamol'] %}
+                                    {{ form_row(fields.quantity, {'label': 'help.need-how-many-doses'|trans}) }}
+                                    <div class="d-none">{{ form_row(fields.details) }}</div>
+                                {% elseif type in ['other'] %}
+                                    {{ form_row(fields.details, {'label': 'help.need-other'|trans}) }}
+                                    <div class="d-none">{{ form_row(fields.quantity) }}</div>
+                                {% elseif type in ['food'] %}
+                                    <div class="d-none">
+                                        {{ form_row(fields.details) }}
+                                        {{ form_row(fields.quantity) }}
+                                    </div>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
 
             <div class="process-block bg-white p-3 p-lg-4 mb-5">
@@ -78,12 +102,12 @@
 
             <div class="text-center">
                 <button type="submit" class="btn btn-lg btn-primary">
-                    {% trans %}label.send-request{% endtrans %}
+                    {{ 'label.send-request'|trans }}
                 </button>
 
                 <div class="mt-3">
                     <strong class="text-muted">
-                        {% trans %}label.can-change-request{% endtrans %}
+                        {{ 'label.can-change-request'|trans }}
                     </strong>
                 </div>
             </div>
@@ -91,12 +115,8 @@
             {{ form_end(form) }}
 
             <div class="legalities pt-5">
-                {% trans %}footer.data-statement{% endtrans %}
+                {{ 'footer.data-statement'|trans|raw }}
             </div>
         </div>
     </div>
-{% endblock %}
-
-{% block javascripts %}
-    {{ encore_entry_script_tags('request') }}
 {% endblock %}
