--- a/templates/process/request_owner_delete_done.html.twig
+++ b/templates/process/request_owner_delete_done.html.twig
@@ -8,16 +8,16 @@
     <div class="process-box">
         <div class="bg-light p-3 p-lg-4">
             <h3 class="text-center font-weight-bold mb-4">
-                {% trans %}request.my-request{% endtrans %}
+                {{ 'request.my-request'|trans }}
             </h3>
 
             <div class="process-details text-center">
-                {% trans %}request.removed{% endtrans %}
+                {{ 'request.removed'|trans }}
 
                 <div class="mt-4">
                     <a href="{{ path('homepage') }}"
                        class="btn btn-link">
-                        {% trans %}label.home{% endtrans %}
+                        {{ 'label.home'|trans }}
                     </a>
                 </div>
             </div>
