--- a/templates/process/request_owner_view.html.twig
+++ b/templates/process/request_owner_view.html.twig
@@ -8,13 +8,13 @@
     <div class="process-box">
         <div class="bg-light p-3 p-lg-4">
             <h3 class="text-center font-weight-bold mb-4">
-                {% trans %}request.my-request{% endtrans %}
+                {{ 'request.my-request'|trans }}
             </h3>
 
             <div class="process-details">
                 {% if success %}
                     <div class="alert alert-success text-center mb-4">
-                        {% trans %}request.registered{% endtrans %}
+                        {{ 'request.registered'|trans }}
                     </div>
                 {% endif %}
 
@@ -22,11 +22,11 @@
                     <div class="mb-3 text-center">
                         <p>
                             <strong>
-                                {% trans %}request.keep-link{% endtrans %}
+                                {{ 'request.keep-link'|trans }}
                             </strong>
                         </p>
 
-                        {% trans %}request.delete-any-time{% endtrans %}
+                        {{ 'request.delete-any-time'|trans }}
                     </div>
 
                     <div class="process-block bg-white p-3 p-lg-4 mb-4">
@@ -35,11 +35,11 @@
 
                     <div class="process-block bg-white p-3 p-lg-4 mb-4">
                         <p>
-                            {% trans %}request.details{% endtrans %}
+                            {{ 'request.details'|trans }}
                         </p>
 
                         <p>
-                            {% trans %}request.told-us{% endtrans %}
+                            {{ 'request.told-us'|trans }}
                         </p>
 
                         {% set ageRanges = {
@@ -55,7 +55,7 @@
                             {% for need in needs %}
                                 <li>
                                     {% if need.helpType == 'groceries' %}
-                                        {% trans %}request.shop{% endtrans %}
+                                        {{ 'request.shop'|trans }}
                                     {% elseif need.helpType == 'babysit' %}
                                         {% trans with {'age': ageRanges[need.childAgeRange]|trans } %}request.babysit{% endtrans %}
                                     {% endif %}
@@ -67,24 +67,24 @@
                     <div class="process-block bg-white p-3 p-lg-4 mb-4">
                         <div class="text-muted text-uppercase">
                             <div class="mb-3">
-                                {% trans %}social.share-initiative{% endtrans %}
+                                {{ 'social.share-initiative'|trans }}
                             </div>
 
                             <div class="process-share text-center">
                                 <a href="https://www.facebook.com/sharer/sharer.php?u={{ url('homepage')|url_encode }}"
-                                   title="{% trans %}social.share-facebook{% endtrans %}" target="_blank" rel="noreferrer noopener">
+                                   title="{{ 'social.share-facebook'|trans }}" target="_blank" rel="noreferrer noopener">
                                     {{ include('_icons/facebook.html.twig') }}
                                 </a>
                                 <a href="https://twitter.com/intent/tweet?text={{ url('homepage') }}"
-                                   title="{% trans %}social.share-twitter{% endtrans %}" target="_blank" rel="noreferrer noopener">
+                                   title="{{ 'social.share-twitter'|trans }}" target="_blank" rel="noreferrer noopener">
                                     {{ include('_icons/twitter.html.twig') }}
                                 </a>
                                 <a href="https://telegram.me/share/url?url={{ url('homepage') }}"
-                                   title="{% trans %}social.share-telegram{% endtrans %}" target="_blank" rel="noreferrer noopener">
+                                   title="{{ 'social.share-telegram'|trans }}" target="_blank" rel="noreferrer noopener">
                                     {{ include('_icons/telegram.html.twig') }}
                                 </a>
                                 <a href="https://wa.me/?text={{ url('homepage') }}"
-                                   title="{% trans %}social.share-whatsapp{% endtrans %}" target="_blank" rel="noreferrer noopener">
+                                   title="{{ 'social.share-whatsapp'|trans }}" target="_blank" rel="noreferrer noopener">
                                     {{ include('_icons/whatsapp.html.twig') }}
                                 </a>
                             </div>
@@ -94,12 +94,12 @@
                     <div class="text-center mt-5">
                         <a href="{{ path('process_requester_delete_confirm', {'ownerUuid': needs[0].ownerUuid}) }}"
                            class="btn btn-primary btn-lg">
-                            {% trans %}request.remove{% endtrans %}
+                            {{ 'request.remove'|trans }}
                         </a>
 
                         <div class="mt-3">
                             <strong class="text-muted">
-                                {% trans %}request.delete-to-update{% endtrans %}
+                                {{ 'request.delete-to-update'|trans }}
                             </strong>
                         </div>
                     </div>
