--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,7 +9,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-9 col-lg-6 col-xl-4">
                 <h1 class="h3 mb-3 font-weight-bold">
-                    {% trans %}admin.login{% endtrans %}
+                    {{ 'admin.login'|trans }}
                 </h1>
 
                 <form method="post">
@@ -18,22 +18,22 @@
                     {% endif %}
 
                     <div class="mb-3">
-                        <label for="inputUsername">{% trans %}admin.username{% endtrans %}</label>
+                        <label for="inputUsername">{{ 'admin.username'|trans }}</label>
                         <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
                     </div>
 
                     <div class="mb-3">
-                        <label for="inputPassword">{% trans %}admin.password{% endtrans %}</label>
+                        <label for="inputPassword">{{ 'admin.password'|trans }}</label>
                         <input type="password" name="password" id="inputPassword" class="form-control" required>
                     </div>
 
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
                     <button class="btn btn-lg btn-primary" type="submit">
-                        {% trans %}admin.login{% endtrans %}
+                        {{ 'admin.login'|trans }}
                     </button>
                     <a href="{{ path('homepage') }}" class="btn btn-lg btn-link">
-                        {% trans %}admin.return{% endtrans %}
+                        {{ 'admin.return'|trans }}
                     </a>
                 </form>
             </div>
